--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -51,17 +51,14 @@ jobs:
         run: az group delete --name ${{ env.RESOURCE_GROUP_NAME }} --yes
       
       - name: Build
-        run: |
-          az bicep build
-          --file ./src_bicep/main.bicep
+        run: az bicep build --file ./src_bicep/main.bicep
             
       - name: Deploy
-        run: |
-          az deployment sub create
-            --name "GitHub.Actions"
-            --location ${{ env.LOCATION }}
-            --template-file ./src_bicep/main.bicep
-            --parameters ./src_bicep/parameters/main.bicepparam
+        run: az deployment sub create
+          --name "GitHub.Actions"
+          --location ${{ env.LOCATION }}
+          --template-file ./src_bicep/main.bicep
+          --parameters ./src_bicep/parameters/main.bicepparam
 
       # - name: Deploy Resource Group
       #   working-directory: tools/templates
