--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -42,12 +42,11 @@ jobs:
         run: export ID=$(az network vnet subnet list --resource-group ${{ env.RESOURCE_GROUP_NAME }} --vnet-name ${{ env.VNET }} --query "[?name=='default'].id" --output tsv); echo "SUBNET_ID=$ID" >> $GITHUB_ENV
       
       - name: Deploy
-        run: |
-          az deployment sub create \
-            --name "GitHub.Actions" \
-            --location "westeurope" \
-            --template-file ./src_bicep/main.bicep \
-            --parameters ./src_bicep/parameters/firststage.bicepparam
+        run: az deployment sub create 
+          --name "GitHub.Actions" 
+          --location "westeurope" 
+          --template-file ./src_bicep/main.bicep 
+          --parameters ./src_bicep/parameters/firststage.bicepparam
 
       - name: Deploy Build ACI Containers
         run: python "./builder/build.py" --async 
