--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -41,12 +41,16 @@ jobs:
       - name: Set Subscription to Environment Variable
         run: export ID=$(az network vnet subnet list --resource-group ${{ env.RESOURCE_GROUP_NAME }} --vnet-name ${{ env.VNET }} --query "[?name=='default'].id" --output tsv); echo "SUBNET_ID=$ID" >> $GITHUB_ENV
       
+      - name: log
+        working-directory: ./src_bicep
+        run: ls
+        
       - name: Deploy
         working-directory: ./src_bicep
         run: az deployment sub create 
             --name "GitHub.Actions" 
             --location "westeurope" 
-            --template-file main.bicep 
+            --template-file firststage.bicep 
             --parameters parameters/main.bicepparam
 
       - name: Deploy Build ACI Containers
