--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -38,13 +38,13 @@ jobs:
       - name: Ensure Bicep
         run: az bicep upgrade
       
-      - name: Deploy
+      - name: Predeploy Bicep
         working-directory: ./src_bicep
         run: az deployment sub create 
             --name "GitHub.Actions-first.stage" 
             --location "westeurope" 
-            --template-file firststage.bicep 
-            --parameters parameters/firststage.bicepparam
+            --template-file predeploy.bicep 
+            --parameters parameters/predeploy.bicepparam
 
       - name: Set Subscription to Environment Variable
         run: export ID=$(az network vnet subnet list --resource-group ${{ env.RESOURCE_GROUP_NAME }} --vnet-name ${{ env.VNET }} --query "[?name=='default'].id" --output tsv); echo "SUBNET_ID=$ID" >> $GITHUB_ENV
