--- a/.github/workflows/deploy_devboxes.yml
+++ b/.github/workflows/deploy_devboxes.yml
@@ -1,8 +1,12 @@
 name: Deploy Dev Boxes
 
+concurrency: ${{ github.ref }}
+
 on:
   workflow_dispatch:
-
+  push:
+    branches: [main]
+    
 jobs:
   build:
     # runs-on: windows-latest
