--- a/.github/workflows/postdeploy.yml
+++ b/.github/workflows/postdeploy.yml
@@ -4,7 +4,7 @@ concurrency: ${{ github.ref }}
 
 on:
   push:
-    branches: [main]
+    branches: [main, automation]
   workflow_dispatch:
   
     
