--- a/.github/workflows/predeploy.yml
+++ b/.github/workflows/predeploy.yml
@@ -5,7 +5,7 @@ concurrency: ${{ github.ref }}
 on:
   workflow_dispatch:
   push:
-    branches: [main]
+    branches: [main, automation]
     paths:
       - 'images/**'
       - 'scripts/**'
